@@ -290,23 +290,6 @@ if (d_ao_check_for_ai in [0, 1]) then {
 #endif
 };
 
-d_mt_fires = [];
-if (d_ao_bfires == 0) then {
-	private _hcount = 0;
-	for "_i" from 1 to selectRandom [4,5,6,7] do {
-		if (_wp_array isEqualTo []) exitWith {};
-		private _ran = (count _wp_array) call d_fnc_RandomFloor;
-		private _pos = _wp_array # _ran;
-		while {isOnRoad _pos} do {
-			_ran = (count _wp_array) call d_fnc_RandomFloor;
-			_pos = _wp_array # _ran;
-			_hcount = _hcount + 1;
-			if (_hcount > 20) exitWith {};
-		};
-		d_mt_fires pushBack (createVehicle ["test_EmptyObjectForFireBig", _pos, [], 0, "NONE"]);
-		_wp_array deleteAt _ran;
-	};
-};
 sleep 0.1;
 
 if (d_with_minefield == 0 && {random 100 > 70}) then {
