@@ -195,7 +195,6 @@ STR_DOM_MISSIONSTRING_2051
 STR_DOM_MISSIONSTRING_2052
 STR_DOM_MISSIONSTRING_2053
 STR_DOM_MISSIONSTRING_2054
-STR_DOM_MISSIONSTRING_2061
 STR_DOM_MISSIONSTRING_MT_RADIUS
 STR_DOM_MISSIONSTRING_2065
 STR_DOM_MISSIONSTRING_2066
