@@ -191,7 +191,6 @@ STR_DOM_MISSIONSTRING_2057
 STR_DOM_MISSIONSTRING_2058
 STR_DOM_MISSIONSTRING_2059
 STR_DOM_MISSIONSTRING_2060
-STR_DOM_MISSIONSTRING_2061
 STR_DOM_MISSIONSTRING_MT_RADIUS
 STR_DOM_MISSIONSTRING_2062
 STR_DOM_MISSIONSTRING_2063
